# plover-casecat

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
plover_casecat/: __init__.py  dict.py  translation.py
