[project]
name = "plover-casecat"
version = "1.0.0"
description = "Stenograph Case CATalyst dictionary format plugin for Plover"
readme = "README.md"
requires-python = ">= 3.7"
license = { file = "LICENSE" }
authors = [{ name = "Sammi Ta", email = "sammi@sammdot.ca" }]
keywords = ["plover", "plover_plugin"]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = ["plover >= 4.0.0.dev11", "kaitaistruct >= 0.10"]

[project.urls]
repository = "https://github.com/sammdot/plover-casecat"
homepage = "https://github.com/sammdot/plover-casecat"

[tool.setuptools]
packages = ["plover_casecat"]

[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]

[project.entry-points."plover.dictionary"]
sgdct = "plover_casecat:CaseCATalystDictionary"
